[package]
name = "gfx-hal"
version = "0.7.0"
description = "gfx-rs hardware abstraction layer"
homepage = "https://github.com/gfx-rs/gfx"
repository = "https://github.com/gfx-rs/gfx"
keywords = ["graphics"]
license = "MIT OR Apache-2.0"
authors = ["The Gfx-rs Developers"]
documentation = "https://docs.rs/gfx-hal"
workspace = "../.."
edition = "2018"

[features]
unstable = []

[lib]
name = "gfx_hal"
path = "src/lib.rs"

[dependencies]
bitflags = "1.0"
naga = { git = "https://github.com/gfx-rs/naga", tag = "gfx-12" }
raw-window-handle = "0.3"
serde = { version = "1", features = ["serde_derive"], optional = true }
thiserror = "1"
openxr = "0.13.1"
libloading = "0.6.6"
openxr-sys = "0.8.5"


[dev-dependencies]
gfx-backend-empty = { path = "../backend/empty", version = "0.7" }
